# ludicrous_llama

./: .bazelrc  .gitignore  CONTRIBUTING.md  README.md  WORKSPACE
base/: BUILD.bazel
color/: BUILD.bazel  color.proto  colors.cc  colors.h  colors_test.cc  material.proto  materials.h
color/proto/: color.proto  material.proto
component/: BUILD.bazel  animate.cc  animate.h  box.cc  box.h  component.cc  component.h  component.proto  component_api_test.cc  component_proto_test.cc  component_table.h  component_table_test.cc  components.cc  components.h  expression.cc  expression.h  gear.cc  gear.h  gear.proto  nested_boxes.pb.txt  ordering.h  parameter.cc  parameter.h  position.cc  position.h  position.proto  positions.cc  positions.h  primitive.cc  primitive.h  property.cc  property.h  render.cc  render.h  scene.h  serialization_test.cc  serialize.h  simple_box.pb.txt  types.h  types_test.cc  (+3 more)
component/proto/: BUILD.bazel  component.proto  position.proto  proto_serialization.h  serialization_test.cc
conan_utils/: install_conan_dependencies.py
demo/: BUILD.bazel  gears.cc  gears_ui.h  lighting_configuration.pb.txt  single_camera_scene.pb.txt  trivial_demo_components.pb.txt  trivial_demo_gears.pb.txt  trivial_demo_scene.pb.txt
filesystem/: utils.cc  utils.h  utils_test.cc
gear/: BUILD.bazel  gear.cc  gear.h  gear.proto  gears.cc  lighting_configuration.pb.txt  position.proto
guid/: BUILD.bazel  create_guid.cc  guid.cc  guid.h  guid_linux.cc  guid_macos.cc  guid_test.cc  guid_windows.cc
hash/: BUILD.bazel  hash_combine.h  hash_combine_test.cc
language/: BUILD.bazel  expression_language.cc  expression_language.h  expression_language_test.cc  parse_tree.cc  parse_tree.h
lighting/: BUILD.bazel  light.cc  light.h  light.proto  lights.cc  lights.h
lighting/proto/: BUILD.bazel  light.proto
material/: BUILD.bazel  color.cc  color.h  colors.cc  colors.h  colors_test.cc  material.cc  material.h  materials.h  serialization_test.cc
material/proto/: BUILD.bazel  color.proto  colors.cc  colors.h  colors_test.cc  material.proto  proto_serialization.h  serialization_test.cc
position/: BUILD.bazel  position.cc  position.h  serialization_test.cc  serialize.h
position/proto/: BUILD.bazel  position.proto  proto_serialization.h  serialization_test.cc
proto/: BUILD.bazel  proto_utils.h  proto_utils_test.cc  simple.proto
render/: BUILD.bazel  camera.cc  camera.h  render_node.cc  render_node.h  scene.cc  scene.h
render/proto/: BUILD.bazel  camera.proto  proto_serialization.h  scene.proto  serialization_test.cc
serialization/: BUILD.bazel  color.proto  component.proto  light.proto  material.proto  position.proto  serialize.h
testing/: test_temp_directory.cc  test_temp_directory.h
ui/: BUILD.bazel  animator.cc  animator.h  application.cc  application.h  camera.h  compass_layout.cc  compass_layout.h  compass_layout_test.cc  component_pane.cc  component_pane.h  demo_pane.cc  demo_pane.h  event_queue.cc  event_queue.h  gear_edit_pane.cc  gear_edit_pane.h  imgui_framer.cc  imgui_framer.h  layout.h  layout_pane.cc  layout_pane.h  light_edit_pane.cc  light_edit_pane.h  lighting_im_render.cc  lighting_im_render.h  lighting_model.cc  lighting_model.h  lighting_model_test.cc  loop.cc  loop.h  pane.h  render.cc  render.h  renderable.cc  renderable.h  signaller.h  signaller_test.cc  ui.h  window.cc  (+1 more)
ui/model/: BUILD.bazel  animate.h  color.cc  color.h  gear.cc  gear.h  light.cc  light.h  material.cc  material.h  position.cc  position.h
ui/testing/: lighting_configuration.pb.txt
