load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "color",
    srcs = [
        "colors.cc",
    ],
    hdrs = [
        "colors.h",
        "materials.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//color/proto",
    ],
)

cc_test(
    name = "colors_test",
    srcs = ["colors_test.cc"],
    deps = [
        ":color",
        "//third_party/gtest",
    ],
)
