load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "component",
    srcs = [
        "components.cc",
    ],
    hdrs = [
        "components.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":gear_cc_proto",
        "//color",
        "//guid",
        "//serialization",
        "//third_party/entt",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
    ],
)

cc_proto_library(
    name = "gear_cc_proto",
    deps = [":gear_proto"],
)

proto_library(
    name = "gear_proto",
    srcs = ["gear.proto"],
    deps = [
        "//serialization:material_proto",
    ],
)

filegroup(
    name = "sample_component_configurations",
    srcs = [
        "nested_boxes.pb.txt",
        "simple_box.pb.txt",
    ],
)

cc_test(
    name = "component_api_test",
    srcs = ["component_api_test.cc"],
    data = [
        ":sample_component_configurations",
    ],
    deps = [
        ":component",
        "//proto",
        "//testing",
        "//third_party/gtest",
    ],
)
