load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "component",
    srcs = [
        "box.cc",
        "component.cc",
        "components.cc",
        "expression.cc",
        "gear.cc",
        "parameter.cc",
        "primitive.cc",
        "property.cc",
        "value.cc",
    ],
    hdrs = [
        "box.h",
        "component.h",
        "component_table.h",
        "components.h",
        "expression.h",
        "gear.h",
        "ordering.h",
        "parameter.h",
        "primitive.h",
        "property.h",
        "value.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//component/proto",
        "//guid",
        "//material",
        "//position",
        "//serialization",
        "//third_party/entt",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
    ],
)

cc_proto_library(
    name = "gear_cc_proto",
    deps = [":gear_proto"],
)

proto_library(
    name = "gear_proto",
    srcs = ["gear.proto"],
    deps = [
        "//material/proto:material_proto",
    ],
)

filegroup(
    name = "sample_component_configurations",
    srcs = [
        "nested_boxes.pb.txt",
        "simple_box.pb.txt",
    ],
)

cc_test(
    name = "component_api_test",
    srcs = ["component_api_test.cc"],
    data = [
        ":sample_component_configurations",
    ],
    deps = [
        ":component",
        "//proto",
        "//testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "value_test",
    srcs = ["value_test.cc"],
    deps = [
        ":component",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "serialization_test",
    srcs = ["serialization_test.cc"],
    deps = [
        ":component",
        "//component/proto",
        "//proto",
        "//testing",
        "//third_party/gtest",
    ],
)

cc_test(
    name = "component_table_test",
    srcs = ["component_table_test.cc"],
    deps = [
        ":component",
        "//guid",
        "//third_party/entt",
        "//third_party/gtest",
    ],
)
