load("@rules_proto//proto:defs.bzl", "proto_library")

filegroup(
    name = "gears_components",
    srcs = [
        "trivial_demo_gears.pb.txt",
    ],
)

filegroup(
    name = "lighting_configurations",
    srcs = [
        "lighting_configuration.pb.txt",
    ],
)

cc_binary(
    name = "gears",
    srcs = [
        "gears.cc",
    ],
    data = [
        ":gears_components",
        ":lighting_configurations",
    ],
    deps = [
        "//color",
        "//component",
        "//lighting",
        "//proto",
        "//ui",
        "//third_party/entt",
        "//third_party/gflags",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/imgui",
        "//third_party/xorg",
    ],
)
