load("@rules_proto//proto:defs.bzl", "proto_library")

filegroup(
    name = "scene_files",
    srcs = [
        "single_camera_scene.pb.txt",
        "trivial_demo_scene.pb.txt",
    ],
)

filegroup(
    name = "lighting_configurations",
    srcs = [
        "lighting_configuration.pb.txt",
    ],
)

cc_binary(
    name = "gears",
    srcs = [
        "gears.cc",
        "gears_ui.h",
    ],
    data = [
        ":lighting_configurations",
        ":scene_files",
    ],
    deps = [
        "//component",
        "//component/proto",
        "//lighting",
        "//lighting/proto",
        "//material",
        "//proto",
        "//render",
        "//render/proto",
        "//serialization",
        "//third_party/entt",
        "//third_party/gflags",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/imgui",
        "//third_party/xorg",
        "//ui",
    ],
)
