load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "gear",
    srcs = [
        "gear.cc",
    ],
    hdrs = [
        "gear.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":gear_cc_proto",
        ":position_cc_proto",
        "//color",
        "//third_party/glad",
        "//third_party/glfw",
    ],
)

cc_proto_library(
    name = "gear_cc_proto",
    deps = [":gear_proto"],
)

proto_library(
    name = "gear_proto",
    srcs = ["gear.proto"],
    deps = [
        "//color:material_proto",
    ],
)

cc_proto_library(
    name = "position_cc_proto",
    deps = [":position_proto"],
)

proto_library(
    name = "position_proto",
    srcs = ["position.proto"],
)

filegroup(
    name = "demo_files",
    srcs = [
        "trivial_demo_gears.pb.txt",
    ],
)

cc_binary(
    name = "gears",
    srcs = [
        "gears.cc",
    ],
    data = [
        ":demo_files",
    ],
    deps = [
        ":gear",
        "//color",
        "//lighting",
        "//proto",
        "//third_party/entt",
        "//third_party/gflags",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/imgui",
        "//third_party/xorg",
    ],
)
