load("@rules_proto//proto:defs.bzl", "proto_library")

filegroup(
    name = "demo_files",
    srcs = [
        "trivial_demo_gears.pb.txt",
    ],
)

filegroup(
    name = "lighting_configuration",
    srcs = [
        "lighting_configuration.pb.txt",
    ],
)

cc_binary(
    name = "gears",
    srcs = [
        "gears.cc",
    ],
    data = [
        ":demo_files",
        ":lighting_configuration",
    ],
    deps = [
        "//color",
        "//component",
        "//lighting",
        "//proto",
        "//third_party/entt",
        "//third_party/gflags",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/imgui",
        "//third_party/xorg",
    ],
)
