load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "lighting",
    visibility = ["//visibility:public"],
    deps = [
        ":light_cc_proto",
        "//color",
        "//component",
        "//proto",
    ],
)

cc_proto_library(
    name = "light_cc_proto",
    deps = [":light_proto"],
)

proto_library(
    name = "light_proto",
    srcs = ["light.proto"],
    deps = [
        "//color:color_proto",
        "//component:position_proto",
    ],
)
