load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "material",
    srcs = [
        "colors.cc",
    ],
    hdrs = [
        "colors.h",
        "materials.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//material/proto",
    ],
)

cc_test(
    name = "colors_test",
    srcs = ["colors_test.cc"],
    deps = [
        ":material",
        "//third_party/gtest",
    ],
)
