load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "ui",
    srcs = [
        "animator.cc",
        "application.cc",
        "compass_layout.cc",
        "component_pane.cc",
        "demo_pane.cc",
        "gear_edit_pane.cc",
        "imgui_framer.cc",
        "light_edit_pane.cc",
        "window.cc",
    ],
    hdrs = [
        "animator.h",
        "application.h",
        "camera.h",
        "compass_layout.h",
        "component_pane.h",
        "demo_pane.h",
        "gear_edit_pane.h",
        "imgui_framer.h",
        "layout.h",
        "light_edit_pane.h",
        "pane.h",
        "window.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//component",
        "//position",
        "//proto",
        "//render",
        "//third_party/entt",
        "//third_party/gflags",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glog",
        "//third_party/imgui",
        "//third_party/xorg",
        "//ui/model",
    ],
)

filegroup(
    name = "test_lighting_configurations",
    srcs = glob(["testing/*.pb.txt"]),
)

cc_test(
    name = "compass_layout_test",
    srcs = [
        "compass_layout_test.cc",
    ],
    deps = [
        ":ui",
        "//third_party/gtest",
    ],
)
