load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "proto",
    visibility = ["//visibility:public"],
    deps = [
        ":component_cc_proto",
    ],
)

cc_proto_library(
    name = "component_cc_proto",
    deps = [":component_proto"],
)

proto_library(
    name = "component_proto",
    srcs = ["component.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//material/proto:material_proto",
        "//position/proto:position_proto",
    ],
)
