load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "proto",
    visibility = ["//visibility:public"],
    deps = [
        ":light_cc_proto",
    ],
)

cc_proto_library(
    name = "light_cc_proto",
    deps = [":light_proto"],
)

proto_library(
    name = "light_proto",
    srcs = ["light.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//component/proto:position_proto",
        "//material/proto:color_proto",
    ],
)
