load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "model",
    srcs = [
        "color.cc",
        "gear.cc",
        "light.cc",
        "material.cc",
    ],
    hdrs = [
        "animate.h",
        "color.h",
        "gear.h",
        "light.h",
        "material.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//component",
        "//component/proto",
        "//lighting",
        "//lighting/proto",
        "//material",
        "//material/proto",
        "//proto",
        "//third_party/entt",
        "//third_party/glog",
    ],
)
