load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "model",
    srcs = [
        "gear.cc",
    ],
    hdrs = [
        "animate.h",
        "gear.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//component",
        "//component/proto",
        "//lighting",
        "//lighting/proto",
        "//material",
        "//material/proto",
        "//proto",
        "//serialization",
        "//third_party/entt",
        "//third_party/glog",
    ],
)
